<resources>
    <string name="app_name">AndroPress</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_favorite">Add to Archive</string>
    <string name="action_share">Share</string>
    <string name="home">Home</string>
    <string name="comments">Comments</string>
    <string name="categories">Category</string>
    <string name="archive">Archive</string>
    <string name="about">About US</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="written_by">Written by :</string>
    <string name="on_date">on date :</string>
    <string name="share_with">Share with</string>
    <string name="share_title">Recommended Article</string>
    <string name="share_body">I recommend reading %1$s. It\'s link is here! Give it a visit \n %2$s</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="content">Content</string>
    <string name="submit">Submit</string>
    <string name="submitting">Sending your comment...</string>
    <string name="add_comment">Add Comment</string>
    <string name="comment_status_close_error">Comment Submittion for this post is closed!</string>
    <string name="comment_submit_success">Your Comment is successfully submited! it will be visible after administrator\'s approval!</string>
    <string name="retry">Retry</string>
    <string name="no_data_message">There is no data found! Please check your internet connection or search query then try again!</string>
    <string name="no_archive_message">You don\'t have any archived data!</string>
    <string name="no_comment_message">There is no comments on this post! be the first person to start conversation!</string>
    <string name="crash_report">We are sorry to inform you that the application has crashed, because of an unknown error! Send it\'s report to the developer to solve it!</string>
    <string name="crash_title">Application Crash!</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="invalid_email">Invalid Email Adress!</string>
    <string name="hint_search">Search post...</string>
    <string name="close_message">Press back again to exit!</string>
    <string name="added_to_favorites">Post is saved to your archive!</string>
    <string name="removed_from_favorites">Post is removed from archive!</string>

    <!--about page data-->
    <string name="about_content">Lorem ipsum dolor sit amet, cu solum laudem graeci has, eam at enim mazim nonumes, te eam mnesarchum adversarium. No mel nibh saperet, cu causae admodum nominati eam. Ius an nihil veniam, ad zril alterum scripserit eam. An duo sumo nemore minimum, no quod vide dicant pro, quem ignota reprimique ea sed.</string>
    <string name="developer">Developed By : Mehrdad Garebaghi</string>
    <string name="companey">Technopedia team.</string>
    <string name="version">Version number 2 (2018/10/18)</string>
    <string name="social_1_adress">http://mgarebaghi.ir/en/</string>
    <string name="social_2_adress">http://mgarebaghi.ir/en/</string>
    <string name="social_3_adress">http://mgarebaghi.ir/en/</string>
    <string name="social_4_adress">http://mgarebaghi.ir/en/</string>
</resources>
