<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:minHeight="300dp"
        android:minWidth="320dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_marginTop="8sp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_marginTop="8sp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_marginTop="8sp">

            <EditText
                android:id="@+id/input_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:inputType="text"
                android:minHeight="72dp"
                android:minLines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_marginTop="8sp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>